--- a/TestAviWeb/index.html
+++ b/TestAviWeb/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=1 height=1 tabindex="-1" style="width: 1px; height: 1px; background: #231F20"></canvas>
-    <script src="Build/v4.1.loader.js"></script>
+    <script src="Build/testavi v6.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/v4.1.data.br",
-        frameworkUrl: "Build/v4.1.framework.js.br",
-        codeUrl: "Build/v4.1.wasm.br",
+        dataUrl: "Build/testavi v6.data.unityweb",
+        frameworkUrl: "Build/testavi v6.framework.js.unityweb",
+        codeUrl: "Build/testavi v6.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Test Avi",
