--- a/TestAviWeb/index.html
+++ b/TestAviWeb/index.html
@@ -82,6 +82,10 @@
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
+        console.log("mobile device");
+      }
+      else{
+        console.log("desktop device");
       }
 
       loadingBar.style.display = "block";
